{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 1,
  "lineage": "d6abe73c-7ec8-895d-4d8e-cef1b233f6e1",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "default-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:686255974968:security-group/sg-0375b5665de761e41",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-0375b5665de761e41",
            "name": "default",
            "region": "ap-south-1",
            "tags": {
              "Team": "Default"
            },
            "timeouts": null,
            "vpc_id": "vpc-09db691bdff879418"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:686255974968:vpc/vpc-09db691bdff879418",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-02b1394d35ee73880",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0a43bcb2baa898853",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09db691bdff879418",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06e71502eec3c3c22",
            "owner_id": "686255974968",
            "region": "ap-south-1",
            "tags": {
              "Team": "Terraform"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:686255974968:security-group/sg-01f859f203c8a3e0c",
            "description": "SG with dynamic ingress rules",
            "egress": [],
            "id": "sg-01f859f203c8a3e0c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ingress for port 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ingress for port 8000",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ingress for port 8001",
                "from_port": 8001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8001
              }
            ],
            "name": "dynamic-sg-example",
            "name_prefix": "",
            "owner_id": "686255974968",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09db691bdff879418"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686255974968",
            "id": "sg-01f859f203c8a3e0c",
            "region": "ap-south-1"
          },
          "dependencies": [
            "data.aws_vpc.default-vpc"
          ]
        }
      ]
    }
  ]
}